# tt-npe

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ENV_SETUP  LICENSE  README.md  build-noc-model.sh  build-npe.sh  create_venv.sh  create_venv_uv.sh  requirements.txt
tt_noc_model/: CMakeLists.txt  tmp.yaml
tt_noc_model/config/: 1d-congestion.yaml  2d-reshard.yaml  random.yaml  single-transfer.yaml
tt_noc_model/include/: ScopedTimer.hpp  genWorkload.hpp  grid.hpp  nocCommon.hpp  nocModel.hpp  nocNode.hpp  nocPE.hpp  nocSim.hpp  nocWorkload.hpp  util.hpp
tt_noc_model/scripts/: sweep.sh
tt_noc_model/src/: genWorkload.cpp  main.cpp
tt_npe/: .gitignore  CMakeLists.txt  pytest.ini  stats_schema.json
tt_npe/cli/: cliOptions.cpp  genWorkload.cpp  main.cpp
tt_npe/config/: 1d-congestion.yaml  2d-reshard.yaml  random.yaml  single-transfer.yaml
tt_npe/cpp/cli/: cliOptions.cpp  genWorkload.cpp  main.cpp
tt_npe/cpp/include/: ScopedTimer.hpp  cliOptions.hpp  genWorkload.hpp  grid.hpp  ingestWorkload.hpp  npeAPI.hpp  npeAssert.hpp  npeChart.hpp  npeCommon.hpp  npeCompressionUtil.hpp  npeConfig.hpp  npeDependencyTracker.hpp  npeDeviceModel.hpp  npeDeviceModelFactory.hpp  npeDeviceModelIface.hpp  npeDeviceModelUtils.hpp  npeDeviceNode.hpp  npeDeviceState.hpp  npeDeviceTypes.hpp  npeEngine.hpp  npeResult.hpp  npeStats.hpp  npeTransferState.hpp  npeUtil.hpp  npeWorkload.hpp  util.hpp
tt_npe/cpp/pybind/: bindings.cpp
tt_npe/cpp/src/: ingestWorkload.cpp  npeAPI.cpp  npeCompressionUtil.cpp  npeDevice.cpp  npeEngine.cpp  npeStats.cpp  npeWorkload.cpp  npeWorkloadIngest.cpp
tt_npe/cpp/test/: test_npe_api.cpp  test_npe_compression.cpp  test_npe_device.cpp  test_npe_engine.cpp  test_npe_util.cpp  test_npe_workload.cpp
tt_npe/doc/: noc_trace_format.md  tt_npe_pybind.html
tt_npe/include/: ScopedTimer.hpp  cli_options.hpp  genWorkload.hpp  ingestWorkload.hpp  nocModel.hpp  nocPE.hpp  npeAPI.hpp  npeAssert.hpp  npeCommon.hpp  npeConfig.hpp  npeDependencyTracker.hpp  npeDeviceModel.hpp  npeDeviceNode.hpp  npeEngine.hpp  npeStats.hpp  npeWorkload.hpp  util.hpp
tt_npe/include/device_data/: wormhole_b0.hpp
tt_npe/py/examples/: programmatic_workload_generation.py
tt_npe/py/pycli/: tt_npe.py
tt_npe/py/pytest/: test_bindings.py
tt_npe/py/util/: fabric_post_process.py  npe_analyze_noc_trace_dir.py  npe_convert_noc_events_to_workload.py  npe_trace_and_analyze.py  subdevice_merge.py  util.py
tt_npe/pybind/11/: binding_test.py  bindings.cpp
tt_npe/pycli/: tt_npe.py
tt_npe/pytest/: test_bindings.py
tt_npe/scripts/: add_license.sh  analyze_noc_trace_dir.py  convert_noc_events_to_workload.py  fabric_post_process.py  generate_multichip_data.py  make_docs.sh  npe_trace_and_analyze.py  regtest.py  run_noc_events_json_as_workload.sh  run_ut.sh  stats_schema.json  sweep.sh  test_all.sh  timeline_schema_v1.json  validate_yaml.py
tt_npe/src/: cliOptions.cpp  cli_options.cpp  genWorkload.cpp  ingestWorkload.cpp  main.cpp  npeAPI.cpp  npeDevice.cpp  npeEngine.cpp  npeWorkload.cpp
tt_npe/test/: test_npe_api.cpp  test_npe_device.cpp  test_npe_engine.cpp  test_npe_workload.cpp
tt_npe/workload/: 2x2_1x1_reshard.json  2x2_4x4_height_reshard.json  2x2_4x4_reshard.json  2x2_8x8_reshard.json  example.yaml  example_wl.json  noctrace_1x2_ShardStrategy.BLOCK_TO_2x4_ShardStrategy.HEIGHT.json  noctrace_1x2_ShardStrategy.BLOCK_TO_2x8_ShardStrategy.BLOCK.json  noctrace_1x4_ShardStrategy.BLOCK_TO_2x8_ShardStrategy.HEIGHT.json  noctrace_1x4_ShardStrategy.BLOCK_TO_4x8_ShardStrategy.BLOCK.json  noctrace_1x4_ShardStrategy.BLOCK_TO_8x4_ShardStrategy.BLOCK.json  noctrace_1x4_ShardStrategy.BLOCK_TO_8x8_ShardStrategy.BLOCK.json  noctrace_2x2_ShardStrategy.BLOCK_TO_2x4_ShardStrategy.BLOCK.json  noctrace_2x2_ShardStrategy.BLOCK_TO_2x8_ShardStrategy.HEIGHT.json  noctrace_2x2_ShardStrategy.BLOCK_TO_4x4_ShardStrategy.BLOCK.json  noctrace_2x2_ShardStrategy.BLOCK_TO_4x8_ShardStrategy.BLOCK.json  noctrace_2x2_ShardStrategy.BLOCK_TO_8x4_ShardStrategy.BLOCK.json  noctrace_2x4_ShardStrategy.BLOCK_TO_4x4_ShardStrategy.BLOCK.json  noctrace_2x4_ShardStrategy.BLOCK_TO_4x4_ShardStrategy.HEIGHT.json  noctrace_4x2_ShardStrategy.BLOCK_TO_2x4_ShardStrategy.HEIGHT.json  noctrace_4x2_ShardStrategy.BLOCK_TO_2x8_ShardStrategy.BLOCK.json  noctrace_4x2_ShardStrategy.BLOCK_TO_2x8_ShardStrategy.HEIGHT.json  noctrace_4x2_ShardStrategy.BLOCK_TO_4x4_ShardStrategy.HEIGHT.json  noctrace_4x4_ShardStrategy.BLOCK_TO_2x4_ShardStrategy.HEIGHT.json  noctrace_4x4_ShardStrategy.BLOCK_TO_8x4_ShardStrategy.BLOCK.json  noctrace_4x4_ShardStrategy.BLOCK_TO_8x8_ShardStrategy.BLOCK.json  noctrace_dram_TO_1x2_ShardStrategy.BLOCK.json  noctrace_dram_TO_1x4_ShardStrategy.HEIGHT.json  noctrace_dram_TO_1x8_ShardStrategy.BLOCK.json  noctrace_dram_TO_1x8_ShardStrategy.HEIGHT.json  noctrace_dram_TO_2x1_ShardStrategy.BLOCK.json  noctrace_dram_TO_2x1_ShardStrategy.HEIGHT.json  noctrace_dram_TO_2x2_ShardStrategy.HEIGHT.json  noctrace_dram_TO_2x8_ShardStrategy.BLOCK.json  noctrace_dram_TO_2x8_ShardStrategy.HEIGHT.json  noctrace_dram_TO_4x1_ShardStrategy.HEIGHT.json  noctrace_dram_TO_4x2_ShardStrategy.HEIGHT.json  noctrace_dram_TO_4x4_ShardStrategy.BLOCK.json  noctrace_dram_TO_8x1_ShardStrategy.BLOCK.json  noctrace_dram_TO_8x1_ShardStrategy.HEIGHT.json  (+5 more)
tt_npe/workload/noc_trace_json/: 2x2_BLOCK_TO_2x8_BLOCK.json  2x2_BLOCK_TO_4x4_HEIGHT.json  2x4_BLOCK_TO_2x4_HEIGHT.json  2x4_BLOCK_TO_4x8_BLOCK.json  2x4_BLOCK_TO_8x8_BLOCK.json  4x2_BLOCK_TO_4x4_BLOCK.json  4x2_BLOCK_TO_8x8_BLOCK.json  DRAM_TO_1x1_BLOCK.json  DRAM_TO_1x1_HEIGHT.json  DRAM_TO_1x2_HEIGHT.json  DRAM_TO_1x4_BLOCK.json  DRAM_TO_2x4_BLOCK.json  DRAM_TO_2x4_HEIGHT.json  DRAM_TO_4x4_HEIGHT.json  DRAM_TO_8x2_HEIGHT.json  noctrace_1x2_ShardStrategy.BLOCK_TO_4x4_ShardStrategy.HEIGHT.json  noctrace_1x2_ShardStrategy.BLOCK_TO_4x8_ShardStrategy.BLOCK.json  noctrace_1x4_ShardStrategy.BLOCK_TO_2x4_ShardStrategy.HEIGHT.json  noctrace_1x4_ShardStrategy.BLOCK_TO_2x8_ShardStrategy.BLOCK.json  noctrace_1x4_ShardStrategy.BLOCK_TO_4x4_ShardStrategy.HEIGHT.json  (+6 more)
(+133 files in other folders)
